@@ -29,6 +29,8 @@ class PiecewiseYieldCurveTest {
     static void testLinearDiscountConsistency();
     static void testLogLinearZeroConsistency();
     static void testLinearZeroConsistency();
+    static void testLinearForwardConsistency();
+    static void testFlatForwardConsistency();
     static void testObservability();
     static boost::unit_test_framework::test_suite* suite();
 };
